# flexdi-grpc-example

./: client.py  main.py  noxfile.py  setup.cfg
protos/flexjob/: flexjob.proto
scripts/: protogen.py  protos.yaml
src/flexjob/db/: models.py
src/flexjob/protos/flexjob/: flexjob_pb2.py  flexjob_pb2.pyi  flexjob_pb2_grpc.py  flexjob_pb2_grpc.pyi
src/flexjob/protos/google/api/: annotations_pb2.py  annotations_pb2.pyi  client_pb2.py  client_pb2.pyi  http_pb2.pyi  launch_stage_pb2.py  launch_stage_pb2.pyi
src/flexjob/protos/google/longrunning/: operations_pb2.py  operations_pb2.pyi  operations_pb2_grpc.py  operations_pb2_grpc.pyi
src/flexjob/protos/google/rpc/: status_pb2.py  status_pb2.pyi
src/flexjob/server/: flexjob.py  operations.py  server.py  store.py  util.py
tests/: conftest.py  test_create_job.py  test_database.py  test_import.py
