[metadata]
name = flexjob
version = 0.0.1
description = A test setup of running a grpc flexdi server.
license = MIT
license_files = LICENSE
author = Cal Pratt
author_email = ccpratt4@gmail.com
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
url = https://github.com/cal-pratt/flexdi

[options]
package_dir =
    =src
packages = find:
install_requires =
    aiosqlite >= 0.18.0
    asyncpg >= 0.27.0
    flexdi >= 0.3.0
    grpc-interceptor >= 0.15.1
    grpc-stubs >= 1.53.0.1
    grpcio >= 1.53.0
    protobuf >= 4.22.3
    psycopg2-binary >= 2.9.6
    PyYAML >= 6.0
    requests >= 2.28.2
    SQLAlchemy >= 2.0.9
    typing_extensions >= 4.5.0

python_requires = >=3.11

[options.packages.find]
where = src

[options.package_data]
flexdi = py.typed

[flake8]
max-line-length = 100
exclude = *_pb2.py,*_pb2_grpc.py

[mypy]
plugins = sqlalchemy.ext.mypy.plugin
